Add a simple UI app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,9 @@ quarkus.datasource.password = hibernate
 #quarkus.hibernate-orm.database.generation.create-schemas=true
 
 
-quarkus.hibernate-search-orm.elasticsearch.version=opensearch:2.13
-quarkus.elasticsearch.devservices.image-name=opensearchproject/opensearch:2.13.0
+quarkus.hibernate-search-orm.schema-management.strategy=create-or-validate
+quarkus.hibernate-search-orm.elasticsearch.version=elastic:8.13.2
+quarkus.elasticsearch.devservices.image-name=elastic/elasticsearch:8.13.2
 
 
 quarkus.insights.vectorsearch.images-root-path=data/images/
@@ -18,3 +19,13 @@ quarkus.insights.vectorsearch.images-root-path=data/images/
 
 quarkus.rest-client."org.hibernate.demos.quarkus.insights.vectorsearch.service.ExternalModelEmbeddingService".url=http://localhost:3000
 quarkus.rest.path=api
+
+
+########################
+# Web Bundler config
+########################
+quarkus.web-bundler.loaders.data-url=svg
+quarkus.web-bundler.loaders.file=
+quarkus.web-bundler.bundle-redirect=true
+quarkus.web-bundler.dependencies.node-modules=node_modules
+quarkus.hibernate-search-orm.management.enabled=true
