Avoid "quarkus" prefix for app config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ quarkus.hibernate-search-orm.elasticsearch.version=elastic:8.13.2
 quarkus.elasticsearch.devservices.image-name=elastic/elasticsearch:8.13.2
 
 
-quarkus.insights.vectorsearch.images-root-path=data/images/
+app.images-root-path=data/images/
 
 
 quarkus.rest-client."org.hibernate.demos.quarkus.insights.vectorsearch.service.ExternalModelEmbeddingService".url=http://localhost:3000
